# convert

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
data/: get_otpui_i18n.sh
ott/convert/csv2json/: feeds.csv  gtfs.py  logos.csv
ott/convert/csv2json/data/: feed_agency.csv  feeds.csv  logos.csv  shared_stops.csv  shared_stops.sql  shared_stops_mapping.csv  shared_stops_trans.csv
ott/convert/csv2json/tmpl/: current_tables.mako  feed_html.mako  gs_sql_view.mako  loader.mako  otp_builder.mako  otp_router.mako  otp_ui.mako  pelias.mako  rt-crontab.mako  text.mako
ott/convert/yaml2json/: convert.py
ott/convert/yaml_json_tools/: generate.py
ott/yaml_json_tools/: convert.py  generate.py  utils.py
