[tool.poetry]
name = "yaml-json-tools"
version = "0.1.0"
description = "tools to convert yml to json for localization of OTP-UI"
authors = ["Frank Purcell <fxpurcell@gmail.com>"]
license = "Mozella 2.x"
readme = "README.md"
packages = [{include = "ott/yaml_json_tools"}]

[tool.poetry.dependencies]
python = "^3.7"
PyYAML = "^6.0"
mergedeep = "^1.3.4"

[tool.poetry.scripts]
yml2json = "ott.yaml_json_tools.convert:yml_to_json"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
