[tool.poetry]
name = "convert"
version = "0.1.1"
description = "tools to convert files, ala csv -> json, yml -> json for localization of OTP-UI, etc..."
authors = ["Frank Purcell <fxpurcell@gmail.com>"]
license = "Mozella 2.x"
readme = "README.md"
packages = [{include = "ott/convert"}]

[tool.poetry.dependencies]
mako = "1.1.6"
mergedeep = "^1.3.4"
python = "^3.6"
PyYAML = "^6.0"
"ott.utils" = {git = "https://github.com/OpenTransitTools/utils.git"}
# "ott.utils" = { path = "../utils/", develop = true }

[tool.poetry.scripts]
csv2json = "ott.convert.csv2json.gtfs:csv2json"
gtfs_feeds = "ott.convert.csv2json.gtfs:gtfs_feed_parser"
json2locs = "ott.convert.yaml2json.generate:json_to_localizations"
mockloc = "ott.convert.yaml2json.generate:mock_localization"
yml2json = "ott.convert.yaml2json.convert:yml_to_json"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
